--- a/public/index.html
+++ b/public/index.html
@@ -54,11 +54,11 @@
     <h1>Генератор відео (3x Унікалізація)</h1>
 
     <label for="modelSelect">🤖 Модель для генерації</label>
-    <select id="modelSelect">
-        <option value="kling">Kling Video (Абсурд / CCTV)</option>
-        <option value="luma">Luma Dream Machine (Мікровсесвіти / Діорами)</option>
-        <option value="minimax-img">Veo 3 / MiniMax (Сюрреалістичний ASMR)</option>
-    </select>
+<select id="modelSelect">
+    <option value="kling">Kling Video (Абсурд / CCTV)</option>
+    <option value="luma">Luma Dream Machine (Мікровсесвіти / Діорами)</option>
+    <option value="minimax">MiniMax Hailuo (Vertical Shorts / ASMR)</option>
+</select>
 
     <label for="imgUrl">Зображення (Стартовий кадр)</label>
     <div class="drop-zone" id="dropZone">
