--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
         </div>
     </div>
 
-    <button id="btn" class="primary-btn">✨ Згенерувати 3 унікальні відео</button>
+    <button id="btn" class="primary-btn">🚀 Створити відео</button>
 
     <div id="progressContainer" class="progress-container"><div id="progressBar" class="progress-bar"></div></div>
     <p id="status"></p>
